--- a/.github/workflows/elinter-ci.yml
+++ b/.github/workflows/elinter-ci.yml
@@ -6,5 +6,7 @@ jobs:
     steps:
     - uses: cachix/install-nix-action@v10
     - uses: actions/checkout@v2
-    - uses: akirak/elinter@v4.0-pre-1
-    - run: elinter -t --ert-runner -e latest
+    - uses: akirak/elinter@v4
+      with:
+        test: buttercup
+        experimental: warn
