--- a/.github/workflows/elinter-ci.yml
+++ b/.github/workflows/elinter-ci.yml
@@ -8,5 +8,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: akirak/elinter@v4
       with:
-        test: buttercup
         experimental: warn
+    - run: elinter -t --ert-runner -e latest
